--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.csv
 *.dat
-*.txt
-*.zip
+merge/wvc2010/rejected.dsv
+merge/wvc2010/wvc2010
 pan-wvc-2010
 pan-wvc-2011
+*.txt
 webis-wvc-2007
+*.zip
