--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+cmd/wikiclean/wikiclean
 *.csv
 *.dat
 merge/wvc2010/rejected.dsv
@@ -7,4 +8,5 @@ pan-wvc-2011
 rejected.dsv
 *.txt
 webis-wvc-2007
+wvcgen
 *.zip
