Move the merge application to directory `cmd`.
Complying with Go effective workflow, module which use the main package
should be located in `cmd` directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-cmd/wikiclean/wikiclean
 *.csv
 *.dat
-merge/wvc2010/rejected.dsv
-merge/wvc2010/wvc2010
+*.txt
+*.zip
+TODO
+cmd/merge-wvc2010/merge-wvc2010
+cmd/merge-wvc2010/rejected.dsv
+cmd/wikiclean/wikiclean
 pan-wvc-2010
 pan-wvc-2011
 rejected.dsv
-*.txt
 webis-wvc-2007
 wvcgen
-*.zip
