Ignore build output in cmd/unified-*.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-*.bak
-*.csv
-*.dat
-*.rejected
-*.txt
-*.zip
-TODO
 cmd/merge-wvc2010/merge-wvc2010
 cmd/merge-wvc2010/rejected.dsv
+cmd/unified-wvc2010/unified-wvc2010
+cmd/unified-wvc2011/unified-wvc2011
 cmd/wikiclean/wikiclean
 pan-wvc-2010
 pan-wvc-2011
 rejected.dsv
+TODO
 webis-wvc-2007
 wvcgen
+*.bak
+*.csv
+*.dat
+*.out
+*.rejected
+*.txt
+*.zip
